tests: change list.of to Arrays.asList and fixed thorw method